--- a/style.css
+++ b/style.css
@@ -1,113 +1,52 @@
-body{
-   background-color: rgb(139, 197, 194);
-}
-.main{
-   display:flex;
-	flex-flow: column nowrap;
-	align-items: center;
-   position: fixed;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   -webkit-transform: translate(-50%, -50%);
-   -moz-transform: translate(-50%, -50%);
-   -o-transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%)
-}
-.main-bar{
-   border-radius: 3%;
-   padding-top: 5%;
- background-color: rgb(255, 255, 255);
-  text-align: center;
-}
-p{
-   color: gray;
-}
-
-.barcode{
-   border-radius: 3%;
-   width:90%;
-}
-.myh2{
-  font-weight: 300;
-}
-.my-p{
- color: gray;
-}
-/* For Desktop View */
-@media screen and (min-width: 1024px) {
-  
-   .my-h3{
-      width: 400px;
-      
-      
-      color: black;
-   }
-   .my-p{
-      width: 400px;
-   
-     
-      color: black;
-   }
-   body{
-      background-color: rgb(139, 197, 194);
-   }
-   
-}
- 
-/* For Tablet View */
-@media screen and (min-device-width: 768px)
-and (max-device-width: 1024px) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+html {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-height: 100vh;
 
 }
- 
-/* For Mobile Portrait View */
-@media screen and (max-device-width: 480px)
-and (orientation: portrait) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+
+body {
+   background-color: hsl(212, 45%, 89%);
+   font-family: 'Outfit', sans-serif;
+   width: 100%;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+
+p {
+   font-size: 15px;
+   font-weight: 400;
+   color: hsl(220, 15%, 55%);
    
 }
- 
-/* For Mobile Landscape View */
-@media screen and (max-device-width: 640px)
-and (orientation: landscape) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+
+h1 {
+   font-weight: 700;
+   font-size: 22px;
+   color: hsl(218, 44%, 22%);
 }
- 
-/* For Mobile Phones Portrait or Landscape View */
-@media screen and (max-device-width: 640px) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+
+div {
+   
+   text-align: center;
+   border: 1px solid white;
+   border-radius: 1rem;
+   width: 15.6rem;
+   padding: 1rem 1rem 1.5rem 1rem;
+   background-color: hsl(0, 0%, 100%);
+   transition: box-shadow .5s;
 }
- 
-/* For iPhone 4 Portrait or Landscape View */
-@media screen and (min-device-width: 320px)
-and (-webkit-min-device-pixel-ratio: 2) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+
+div:hover{
+   box-shadow: 0px 11px 39px 9px hsl(210, 30%, 78%);
 }
- 
-/* For iPhone 5 Portrait or Landscape View */
-@media (device-height: 568px) and (device-width: 320px)
-and (-webkit-min-device-pixel-ratio: 2) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
+
+div img {
+   max-width: 100%;
+   border-radius: .75rem;
 }
- 
-/* For iPhone 6 and 6 plus Portrait or Landscape View */
-@media (min-device-height: 667px) and (min-device-width: 375px)
-and (-webkit-min-device-pixel-ratio: 3) {
-   body{
-      background-color: rgb(139, 197, 194);
-   }
-}
+
