--- a/my-first-qr-code-component-main/src/App.css
+++ b/my-first-qr-code-component-main/src/App.css
@@ -37,12 +37,12 @@ h1 {
   border-radius: 1rem;
   width: 15rem;
   padding: 1rem 1rem 1.5rem 1rem;
-  color: antiquewhite;
+  /* color: antiquewhite; */
   background-color: white;
   /* transition: box-shadow .5s; */
 }
 
-myDiv:hover{
+div:hover{
   box-shadow: 0px 11px 39px 9px hsl(210, 30%, 78%);
 }
 
